adapt UniTest according to previous changes regarding NavigationRequest and UriBuilder